--- a/homework/HW3_WH_Salaries.html
+++ b/homework/HW3_WH_Salaries.html
@@ -442,7 +442,7 @@ higher salaries are pulling the average up above the median. The min
 salary is 0, indicating there are unpaid/missing value entries that
 could affect analysis, while the max is 225,700 showing wide salary
 range. The 0 values and highest salaries act as outliers and contribute
-to the skewness of the data.</p>
+to the skewness of the data..</p>
 </div>
 <div id="task-7-story-idea" class="section level3">
 <h3>Task 7: Story Idea</h3>
