--- a/activities/VBPercentiles.html
+++ b/activities/VBPercentiles.html
@@ -425,7 +425,8 @@ season.UTEP, as the top team sets the standard being the 100th
 percentile. In the 2024 season, the Maryland Volleyball record was
 14-17, objectively a disappointing result. So the fact they ranked so
 high in the table for the amount of aces suggests that aces don’t really
-matter all that much when it comes to linking playing stats to wins.</p>
+matter all that much when it comes to linking playing stats to
+wins..</p>
 <p>When you are done, save your work, switch to GitHub Desktop, then
 add, commit and push your changes to GitHub and submit the URL of the
 notebook in ELMS.</p>
